# SDL3-example

./: .gitignore  CMakeLists.txt  README.md  image.cpp  main.cpp  sound.cpp
src/: font.cpp  image.cpp  load_mp3.cpp  load_wave.cpp  particle.cpp
src/pong/: Ball.cpp  Ball.h  Board.cpp  Board.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  main.cpp  main.h
